another attempted fix for status bar on ios PWA

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -56,9 +56,8 @@ body {
 /* End Loader Styling */
 
 /* Start Navigation Styling */
-
 nav{
-	padding-top: min(20px, env(safe-area-inset-left));
+	padding-top: env(safe-area-inset-left);
 }
 #toggler {
 	margin-right: 10px;
